<resources>
    <string name="app_name">NTH Restaurant</string>
    <string name="bophanphucvu">BỘ PHẬN PHỤC VỤ</string>
    <string name="bophanbep">BỘ PHẬN BẾP</string>
    <string name="bophanphache">BỘ PHẬN PHA CHẾ</string>


    <!--    Fragment Đăng nhập      -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_dangnhap_tieude">ĐĂNG NHẬP</string>
    <string name="fragment_dangnhap_quenmatkhau">Quên mật khẩu?</string>
    <string name="fragment_dangnhap_hint_tendangnhap">Tên đăng nhập</string>
    <string name="fragment_dangnhap_hint_matkhau">Mật khẩu</string>
    <!--    Fragment Đăng nhập      -->

    <!--    Fragment Đặt món      -->
    <string name="fragment_datmon_et_hint">Cá hấp</string>
    <string name="fragment_datmon_tv_loaimonan">Loại món ăn</string>
    <string name="fragment_datmon_xacnhandat">Xác nhận</string>
    <!--    Fragment Đặt món      -->

    <!--    Dialog Đặt món      -->
    <string name="dialog_dat_mon_tv_chuthich">Ghi chú:</string>
    <string name="dialog_dat_mon_tv_so_luong">1</string>
    <string name="dialog_dat_mon_btn_xac_nhan">Xác nhận</string>
    <!--    Dialog Đặt món      -->

    <!--    Dialog thông báo thành công      -->
    <string name="dialog_thong_bao_thanh_cong_btn_xac_nhan">OK</string>
    <!--    Dialog thông báo thành công      -->

    <!--    Dialog thông báo thất bại      -->
    <string name="dialog_thong_bao_that_bai_btn_xac_nhan">OK</string>
    <!--    Dialog thông báo thất bại      -->

    <!--    Dialog đăng xuất      -->
    <string name="dialog_dang_xuat_tv_tieu_de">XÁC NHẬN ĐĂNG XUẤT</string>
    <string name="dialog_dang_xuat_tv_cau_hoi">Bạn có muốn đăng xuất?</string>
    <string name="dialog_dang_xuat_btn_dang_xuat">Đăng xuất</string>
    <string name="dialog_dang_xuat_btn_huy">Hủy</string>
    <!--    Dialog đăng xuất      -->

    <!--    Dialog chi tiết đặt món      -->
    <string name="dialog_chi_tiet_dat_mon_btn_da_phuc_vu">Đã phục vụ</string>
    <!--    Dialog chi tiết đặt món      -->

    <!--    Dialog hủy món đặt      -->
    <string name="dialog_huy_mon_dat_tieu_de">XÁC NHẬN XÓA MÓN ĐẶT</string>
    <string name="dialog_huy_mon_dat_tv_cau_hoi">Bạn muốn xóa chi tiết đặt món này?</string>
    <string name="dialog_huy_mon_dat_btn_xac_nhan">Xác nhận</string>
    <!--    Dialog hủy món đặt      -->

    <!--    Fragment đặt chỗ      -->
    <string name="fragment_dat_cho_tv_hint_tim_kiem">Phòng 1</string>
    <string name="fragment_dat_cho_tv_phong">Phòng</string>
    <string name="fragment_dat_cho_tv_ban">Bàn</string>
    <!--    Fragment đặt chỗ      -->

    <!--    Item phiếu đặt      -->
    <string name="item_phieu_dat_maphieudat">Phiếu đặt: %s</string>
    <string name="item_phieu_dat_dat_mon">ĐẶT MÓN</string>
    <string name="item_phieu_dat_chi_tiet">CHI TIẾT</string>
    <!--    Item phiếu đặt      -->

    <!--    Item bàn      -->
    <string name="item_ban_so_ghe">%s</string>
    <!--    Item bàn      -->

    <!--    Item món ăn      -->
    <string name="item_mon_an_chu_thich">Chú thích: </string>
    <!--    Item món ăn      -->

    <!--    Item chi tiết đặt món      -->
    <string name="item_chi_tiet_dat_mon_cap_nhat">CẬP NHẬT</string>
    <string name="item_chi_tiet_dat_mon_huy_mon">HỦY MÓN</string>
    <!--    Item chi tiết đặt món      -->

    <!--    Fragment chi tiết đặt món      -->
    <string name="fragment_chi_tiet_dat_mon_tv_tieu_de">CHI TIẾT ĐƠN HÀNG</string>
    <!--    Fragment chi tiết đặt món      -->

    <!--    Fragment thông tin cá nhân      -->
    <string name="fragment_thong_tin_ca_nhan_doi_mat_khau">ĐỔI MẬT KHẨU</string>
    <string name="fragment_thong_tin_ca_nhan_dang_xuat">ĐĂNG XUẤT</string>
    <!--    Fragment thông tin cá nhân      -->

    <!--    Dialog đổi mật khẩu      -->
    <string name="dialog_doi_mat_khau_tv_tieu_de">THAY ĐỔI MẬT KHẨU</string>
    <string name="dialog_doi_mat_khau_et_mat_khau_moi">Mật khẩu mới</string>
    <string name="dialog_doi_mat_khau_et_xm_mat_khau_moi">Xác nhận lại mật khẩu</string>
    <string name="dialog_doi_mat_khau_btn_doi_mat_khau">ĐỔI MẬT KHẨU</string>
    <!--    Dialog đổi mật khẩu      -->

    <!--    Item món đặt      -->
    <string name="item_mon_dat_btn_dang_lam">ĐANG LÀM</string>
    <string name="item_mon_dat_btn_cho_phuc_vu">HOÀN TẤT</string>
    <string name="item_mon_dat_btn_huy_mon">HỦY MÓN</string>
    <!--    Item món đặt      -->

</resources>