<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_white"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTittle"
        android:text="@string/dialog_doi_mat_khau_tv_tieu_de"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/dialog_dang_xuat_tv_tittle" />

    <LinearLayout
        android:id="@+id/llMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMatKhauMoi"
            style="@style/fragment_dangnhap_et"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:hint="@string/dialog_doi_mat_khau_et_mat_khau_moi" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMatKhauMoi_XM"
            style="@style/fragment_dangnhap_et"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:hint="@string/dialog_doi_mat_khau_et_xm_mat_khau_moi" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDoiMatKhau_MK"
        android:background="@drawable/btn_dangnhap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel_MK"
        app:layout_constraintTop_toBottomOf="@id/llMatKhau"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/dialog_doi_mat_khau_btn_doi_mat_khau"
        style="@style/dialog_dang_xuat_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel_MK"
        android:background="@drawable/btn_huymon"
        app:layout_constraintStart_toEndOf="@id/btnDoiMatKhau_MK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMatKhau"
        android:text="@string/dialog_dang_xuat_btn_huy"
        style="@style/dialog_dang_xuat_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>