<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_white"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTittle"
        android:text="@string/dialog_huy_mon_dat_tieu_de"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/dialog_dang_xuat_tv_tittle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCauHoi_HM_BPC"
        android:text="@string/dialog_huy_mon_dat_tv_cau_hoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        style="@style/dialog_dang_xuat_tv_cau_hoi" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnXacNhan_HM_BPC"
        android:background="@drawable/btn_dangnhap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel_HM_BPC"
        app:layout_constraintTop_toBottomOf="@id/tvCauHoi_HM_BPC"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/dialog_huy_mon_dat_btn_xac_nhan"
        style="@style/dialog_dang_xuat_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel_HM_BPC"
        android:background="@drawable/btn_huymon"
        app:layout_constraintStart_toEndOf="@id/btnXacNhan_HM_BPC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCauHoi_HM_BPC"
        android:text="@string/dialog_dang_xuat_btn_huy"
        style="@style/dialog_dang_xuat_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>