<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DangNhapFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@color/orange"
        android:paddingTop="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_icon" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/vTittle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/wave"
        app:layout_constraintTop_toBottomOf="@id/llTittle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTittle"
        android:text="@string/fragment_dangnhap_tieude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTittle"
        style="@style/fragment_dangnhap_tvTittle" />

    <LinearLayout
        android:id="@+id/llDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTenDangNhap"
            style="@style/fragment_dangnhap_et"
            android:drawableStart="@drawable/ic_person"
            android:inputType="text"
            android:hint="@string/fragment_dangnhap_hint_tendangnhap"
            android:text="NQN"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMatKhau"
            style="@style/fragment_dangnhap_et"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:hint="@string/fragment_dangnhap_hint_matkhau"
            android:text="02042000"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llDangNhap"
        android:text="@string/fragment_dangnhap_tieude"
        style="@style/fragment_dangnhap_btnDangNhap" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/btnDangNhap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_dangnhap_quenmatkhau"
        style="@style/fragment_dangnhap_tvQuenMatKhau" />

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>