<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DatChoFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/svPhong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/fragment_dat_cho_tv_hint_tim_kiem"
        style="@style/fragment_datmon_sv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhong"
        android:text="@string/fragment_dat_cho_tv_phong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svPhong"
        style="@style/fragmet_datmon_tv_tittle" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srPhong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhong"
        style="@style/fragment_datmon_sr_loaimonan">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_phong"
            tools:itemCount="6"
            android:scrollbars="horizontal"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBan"
        android:text="@string/fragment_dat_cho_tv_ban"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srPhong"
        style="@style/fragmet_datmon_tv_tittle" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srBan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBan"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/fragment_datmon_sr_monan"
        android:layout_marginTop="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/item_ban"
            tools:itemCount="24"
            android:scrollbars="vertical" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>