<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_white"
    android:layout_marginBottom="6dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhieuDat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/item_phieu_dat_maphieudat"
        tools:text="Phiếu đặt: 1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_house"
        app:layout_constraintStart_toStartOf="@+id/tvPhieuDat"
        app:layout_constraintTop_toBottomOf="@id/tvPhieuDat"
        android:layout_marginTop="6dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivPhong"
        app:layout_constraintTop_toTopOf="@id/ivPhong"
        app:layout_constraintBottom_toBottomOf="@id/ivPhong"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        android:layout_marginStart="10dp"
        tools:text="Phòng 1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_table"
        app:layout_constraintStart_toStartOf="@+id/ivPhong"
        app:layout_constraintTop_toBottomOf="@id/ivPhong"
        android:layout_marginTop="6dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivBan"
        app:layout_constraintTop_toTopOf="@id/ivBan"
        app:layout_constraintBottom_toBottomOf="@id/ivBan"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        android:layout_marginStart="10dp"
        tools:text="Bàn 1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDatMon"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnChiTiet"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_dangnhap"
        android:text="@string/item_phieu_dat_dat_mon"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChiTiet"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDatMon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_dangnhap"
        android:text="@string/item_phieu_dat_chi_tiet"/>

</androidx.constraintlayout.widget.ConstraintLayout>